--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "patternfly-seed",
-  "version": "0.0.2",
+  "name": "quarkuscoffeeshop-homeoffice-ui",
+  "version": "0.1",
   "description": "An open source build scaffolding utility for web apps.",
   "main": "server.js",
   "repository": "https://github.com/patternfly/patternfly-react-seed.git",
