Updated mock data

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "quarkuscoffeeshop-homeoffice-ui",
-  "version": "0.1.1",
-  "description": "An open source build scaffolding utility for web apps.",
+  "version": "0.1.2",
+  "description": "UI for Quarkus Coffeeshop Homeoffice",
   "main": "server.js",
-  "repository": "https://github.com/patternfly/patternfly-react-seed.git",
-  "homepage": "https://patternfly-react-seed.surge.sh",
+  "repository": "https://github.com/quarkuscoffeeshop/quarkuscoffeeshop-homeoffice-ui.git",
+  "homepage": "https://github.com/quarkuscoffeeshop/quarkuscoffeeshop-homeoffice-ui",
   "license": "MIT",
   "private": true,
   "scripts": {
