--- a/package.json
+++ b/package.json
@@ -77,11 +77,16 @@
     "webpack-merge": "^5.3.0"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^4.0.0",
     "@patternfly/react-charts": "^6.11.7",
     "@patternfly/react-core": "^4.75.2",
     "@patternfly/react-icons": "^4.7.16",
     "@patternfly/react-styles": "^4.7.12",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.10",
+    "apollo-link-http": "^1.5.17",
     "express": "^4.17.1",
+    "graphql": "^15.4.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-router-last-location": "^2.0.1"
