--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
     "apollo-link-http": "^1.5.17",
+    "env-cmd": "^10.1.0",
     "express": "^4.17.1",
     "graphql": "^15.4.0",
     "react": "^16.14.0",
